# TORCH

./: CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Doxyfile  INSTALL  Makefile  README.md  anim_pack  animate  animate.sh  batch_rename  pl_plot  pl_prepare  pl_unpack  pl_zpad  plot.gnu  plot.py  plotall.sh  slice.py  tsv2csv.cpp  tsvcsv  unpack_tmp.sh  xyplot.py  zeropad.sh
cmake/modules/: FindMPI.cmake  FindPackageHandleStandardArgs.cmake
config/: data2D_025.txt  parameters.lua  setup.lua  torch-config.lua  torch-setup.lua  zams-stripped.txt
config/cornish/: 210 UCHII regions with angular sizes histogram  210 UCHII regions with distances histogram  210 UCHII regions with physical sizes histogram  210_candidate_uchii.csv
image2torch/src/: image2torch.cpp
include/selene/: LuaRef.h  Selector.h
refdata/: DR21.txt  dr21.txt  parameters.lua  parameters.xml  parameters_template.lua  setup.lua  setup_template.lua  zams.txt
scripts/: calc_if.py  calc_wind.py  casa_run  cleanup  coolingtime.py  coolminmax.py  final-snap-plot  gunzipkeep  hgspy.py  make_all_videos  minmax.py  pl_avidemux_order  pl_unpack  pl_zpad  recomb.py  shift_num  torch-multi.py  torch1.py  torch1x3-seq.py  torch2x2-seq.py  torch2x2.py  torch_plot.py  video_maker  vink.py
scripts/Tests/: CoolingSignTest.py
scripts/convert_binary/: convert.cpp
scripts/cornish/: G010.3009-00.1477_CORNISH_5GHz.fits  RadioParamGen.py  calc-casa-pk-flux.py  calc-casa-sizes.py  calc-casa-tot-flux.py  calc-max-flux.py  calc-mean-ne.py  calc-size.py  calc-stag-time.py  calc-tot-flux.py  check-acc-lum.py  check-flux.py  check-injection-region.py  check-mean-flux.py  check-missing-fits.py  check-single-flux.py  check-size.py  check-stuff.py  compile-100kyr-survey.py  compile-density-dep-survey.py  compile-dist-survey.py  compile-final-survey.py  compile-lat-survey.py  compile-minage-survey.py  compile-weighted-survey.py  cornish-plot.py  cornish-with-distances.py  estimate-total-flux.py  exclude-casa-weak-flux.py  exclude-large-size.py  exclude-weak-flux.py  find-outliers.py  flux-finder.py  hist-age.py  hist-flux-ranged.py  hist-flux.py  hist-imf.py  hist-locations-full.py  hist-locations.py  hist-lum.py  (+31 more)
scripts/galsim/: find-spitzer.py  galaxy-den-slice-xz.py  galaxy-den-slice.py  galaxy-den.py  galaxy-select.py  galaxy-stars.py  kroupa.py  size-fit.py
scripts/misc/: batch-copy  calc_if.py  coolingtime.py  gravity.py  henney-cooling.py  hummer.txt  recomb.py  sod.py  torchFITS.py  vink.py
scripts/modelpaper1/: auto-size.py  central-densities.py  emeasure-angle.py  emeasure-mvd-combined-t.py  emeasure-mvd-combined.py  emeasure-mvd-lower.py  emeasure-mvd-upper.py  emeasure-mvd.py  emeasure-mvt-combined-t.py  emeasure-mvt-combined.py  emeasure-mvt-lower.py  emeasure-mvt-upper.py  emeasure-mvt.py  enhanced-cooling.py  four-panel.py  mass-density-fits.py  mass-density-if-samesize.py  mass-density-tem-samesize.py  mass-mdot.py  mass-qlyc.py  mass-time-fits.py  mass-time-tem-samesize.py  mass-vinf.py  param-table-2.py  param-table.py  pressure-ratio.py  radio-mvd.py  radio-mvt.py  sed-compare.py  size-calc.py  spectral-index-map.py  spectral-index-mvd.py  spectral-index-mvt.py  total-cool.py  vinf-test.py
scripts/radiation-plots/: champagne-2x2-seq.py  champagne-2x2.py  dtype-early.py  dtype-late.py  multi-champagne.py  multi-shadowing2.py  multi-strickland2.py  raga-exact.py  rt-int-compare.py  shadow-2x2-seq.py  shadowing.py  shadowing2-2x2-seq.py  (+3 more)
src/: CMakeLists.txt  boundary.cpp  boundary.h  boundary.hpp  constants.h  constants.hpp  external.cpp  external.h  external.hpp  grid3d.cpp  grid3d.h  grid3d.hpp  gridcell.cpp  gridcell.h  gridcell.hpp  hydro.cpp  hydro.h  hydro.hpp  integrator.cpp  integrator.h  integrator.hpp  io.cpp  io.h  io.hpp  main.cpp  main.h  main.hpp  mpihandler.cpp  mpihandler.h  mpihandler.hpp  parameterparser.cpp  parameterparser.h  parameters.cpp  parameters.h  parameters.hpp  partition.cpp  partition.h  partition.hpp  radiation.cpp  radiation.h  (+13 more)
src/Fluid/: Boundary.cpp  Boundary.hpp  Container.hpp  Fluid.cpp  Fluid.hpp  Grid.cpp  Grid.hpp  GridCell.cpp  GridCell.hpp  GridCellCollection.cpp  GridCellCollection.hpp  GridFactory.cpp  GridFactory.hpp  PartitionManager.cpp  PartitionManager.hpp  Star.cpp  Star.hpp
src/IO/: Checkpointer.cpp  Checkpointer.hpp  DataPrinter.cpp  DataPrinter.hpp  DataReader.cpp  DataReader.hpp  FileManagement.cpp  FileManagement.hpp  Logger.cpp  Logger.hpp  ParseLua.hpp  ProgressBar.cpp  ProgressBar.hpp  StreamGZ.cpp  StreamGZ.hpp
src/Integrators/: Hydro.cpp  Hydro.hpp  Integrator.hpp  Radiation.cpp  Radiation.hpp  Reconstruction.hpp  Riemann.cpp  Riemann.hpp  SlopeLimiter.cpp  SlopeLimiter.hpp  SplineData.cpp  SplineData.hpp  Thermodynamics.cpp  Thermodynamics.hpp
src/MPI/: MPI_Wrapper.cpp  MPI_Wrapper.hpp
src/Misc/: Timer.cpp  Timer.hpp
src/Torch/: Common.hpp  Constants.cpp  Constants.hpp  Converter.cpp  Converter.hpp  Parameters.cpp  Parameters.hpp  Torch.cpp  Torch.hpp
(+20 files in other folders)
